cloud/w10/temp/gatekeeper/templates/k8sdisallowhostnetwork.yaml
# Lab 1.2 - Luật 4: cấm hostNetwork: true
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "pod dùng hostNetwork: true"
      }
