cloud/w10/temp/gatekeeper/templates/k8sdisallowroot.yaml
# Lab 1.2 - Luật 3: cấm runAsUser: 0
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowroot
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowroot

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("container %q chạy root (runAsUser=0)", [container.name])
      }
