cloud/w10/temp/gatekeeper/templates/k8srequiredlabels.yaml
# Lab 1.3 - Custom: bắt buộc có label `owner`
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels

      violation[{"msg": msg}] {
        provided := {k | input.review.object.metadata.labels[k]}
        required := {k | k := input.parameters.labels[_]}
        missing := required - provided
        count(missing) > 0
        msg := sprintf("thiếu label bắt buộc: %v", [missing])
      }
